--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.2",
     "locks": "^0.2.2",
     "ping": "^0.2.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0"
   }
 }
