--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ping": "^0.2.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
+  },
+  "devDependencies": {
+    "cors": "^2.8.1"
   }
 }
