--- a/ui/bower.json
+++ b/ui/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "backbone": "backbonejs#^1.3.3",
     "jquery": "^3.2.1",
-    "mustache.js": "mustache#^2.3.0"
+    "mustache.js": "mustache#^2.3.0",
+    "bootstrap": "^3.3.7"
   }
 }
